# comfyUI-tool-2lab

./: .gitignore  2lab.ini.example  LICENSE  README.md  __init__.py  config_template.json  downloadModel.py  downloadModelForNode.py  properties_template.json  pyproject.toml  requirements.txt
configs/: lora.json  vae.json
js/: 2lab.js  time.js
nodes/: caller.py  constants.py  image.py  llm.py  loader.py  localWorker.py  properties_loader.py  publish.py  text.py  utils.py
nodes/api/: azure_gpt.py  baidu_translator.py  caller.py  chatGlm.py  chatglm_gpt.py  factx_api.py  llm.py  openai_gpt.py  properties_loader.py  youdao_ai.py
nodes/api/factx/: factx_api.py
nodes/common/: fields.py  sizes.py  utils.py
nodes/factx/: factx_api.py
nodes/factxApi/: llm.py
nodes/image/: image_mask.py  image_process.py  txt_to_image.py
nodes/llm/: azure_gpt.py  baidu_translator.py  chatglm_gpt.py  openai_gpt.py  youdao_ai.py
nodes/local/: localWorker.py
nodes/pack/: apiNodes.py
nodes/tool/: batch.py  loader.py  number_input.py  preview.py  previewNode.py  seed.py  text.py
standardized/: checkpoints.json  controlnet.json  lora.json  model.json  vae.json
