[project]
name = "comfyui-tool-2lab"
description = "toolkits"
version = "1.4.0"
license = "LICENSE"
dependencies = ["Pillow", "numpy", "torch","requests"]

[project.urls]
Repository = "https://github.com/AI2lab/comfyUI-tool-2lab"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ai2lab"
DisplayName = "comfyUI-tool-2lab"
Icon = "asset/image/logo.jpg"
